Updated language files for transporter beacon
Updated a few entries to lower case

--- a/src/main/resources/assets/warpdrive/lang/de_DE.lang
+++ b/src/main/resources/assets/warpdrive/lang/de_DE.lang
@@ -289,14 +289,15 @@ tile.warpdrive.forcefield.relay2.tooltip=Unterstützt bis zu 1 Upgrade im Netzwe
 tile.warpdrive.forcefield.relay3.name=Überlegenes Kraftfeld Relais
 tile.warpdrive.forcefield.relay3.tooltip=Unterstützt bis zu 1 Upgrade im Netzwerk
 
-tile.warpdrive.movement.Lift.name=Lift
-tile.warpdrive.movement.ShipController.name=Raumschiff Steuerung
-tile.warpdrive.movement.ShipController.tooltip=Definiert dein Schiff relativ zum Kern. Schließe einen Computer an, um das Interface zu öffnen.\nSollte horizontal neben dem Kern plaziert werden.
-tile.warpdrive.movement.ShipCore.name=Raumschiff Kern
-tile.warpdrive.movement.ShipCore.tooltip=Definiert dein Schiff relativ zur Steuerung. Schließe eine Energiequelle an, um den Kern zu laden.\nSollte horizontal neben der Steuerung plaziert werden.
-tile.warpdrive.movement.ShipCore.bounding_box.disabled=Bounding box display have been disabled.
-tile.warpdrive.movement.ShipCore.bounding_box.enabled=Bounding box display is now enabled. Only you can see it.\nSneak right-click the Ship core again to disable it.
+tile.warpdrive.movement.lift.name=Lift
+tile.warpdrive.movement.ship_controller.name=Raumschiff Steuerung
+tile.warpdrive.movement.ship_controller.tooltip=Definiert dein Schiff relativ zum Kern. Schließe einen Computer an, um das Interface zu öffnen.\nSollte horizontal neben dem Kern plaziert werden.
+tile.warpdrive.movement.ship_core.name=Raumschiff Kern
+tile.warpdrive.movement.ship_core.tooltip=Definiert dein Schiff relativ zur Steuerung. Schließe eine Energiequelle an, um den Kern zu laden.\nSollte horizontal neben der Steuerung plaziert werden.
+tile.warpdrive.movement.ship_core.bounding_box.disabled=Bounding box display have been disabled.
+tile.warpdrive.movement.ship_core.bounding_box.enabled=Bounding box display is now enabled. Only you can see it.\nSneak right-click the Ship core again to disable it.
 tile.warpdrive.movement.transporter_beacon.name=Transporter Leuchtfeuer
+tile.warpdrive.movement.transporter_beacon.tooltip=§bRight click a Transporter Core§7 to set its remote location\n§bSneak§7 to retrieve its signature\n§bPlace as a block§7 to trigger emergency transportation
 tile.warpdrive.movement.transporter_containment.name=Transporter Containment
 tile.warpdrive.movement.transporter_core.name=Transporter Core
 tile.warpdrive.movement.transporter_scanner.name=Transporter Scanner
@@ -684,6 +685,15 @@ warpdrive.IC2reactorLaserMonitor.noReactor=Kein Reaktor gefunden!
 warpdrive.IC2reactorLaserMonitor.multipleReactors=%1$d Reaktor(en) verbunden.
 
 warpdrive.transporter.status=Von (%1$.0f %2$.0f %3$.0f) zu (%4$.0f %5$.0f %6$.0f)
+warpdrive.transporter_beacon.status.invalid=§cNo transporter room linked
+warpdrive.transporter_beacon.status.valid=Linked to transporter room %1$s\n§8%2$s
+warpdrive.transporter_signature.get_missing=§cTransporter room has no signature yet!
+warpdrive.transporter_signature.get_same=§cTransporter beacon is already linked to %1$s.
+warpdrive.transporter_signature.get=Transporter beacon is now linked to %1$s.
+warpdrive.transporter_signature.set_missing=§cTransporter beacon needs to be linked first!
+warpdrive.transporter_signature.set_self=§cTransporter room can't target itself!
+warpdrive.transporter_signature.set_same=§cTransporter room is already linked to %1$s.
+warpdrive.transporter_signature.set=Transporter room is now linked to %1$s.
 
 warpdrive.tooltip.itemTag.breathingHelmet=§bRaumatmung§r verbraucht Luftkanister oder IC2 Druckluftzellen.
 warpdrive.tooltip.itemTag.flyInSpace=§bRaumtaugliches Jetpack§r.
