--- a/src/main/resources/assets/warpdrive/lang/nl_NL.lang
+++ b/src/main/resources/assets/warpdrive/lang/nl_NL.lang
@@ -286,14 +286,15 @@ tile.warpdrive.forcefield.relay2.tooltip=Kan tot maar 1 krachtveld-upgrade delen
 tile.warpdrive.forcefield.relay3.name=Superieure Krachtvelds-relais
 tile.warpdrive.forcefield.relay3.tooltip=Kan tot maar 1 krachtveld-upgrade delen in zijn netwerk
 
-tile.warpdrive.movement.Lift.name=Lift
-tile.warpdrive.movement.ShipController.name=Schips-Bestuurder
-tile.warpdrive.movement.ShipController.tooltip=Difineert uw schips-voorkant ten opzigte van kern. Sluit een computer aan om de interface te openen.\nMoet horizontaal naast een Schips-Kern worden geplaatst.
-tile.warpdrive.movement.ShipCore.name=Schip-Kern
-tile.warpdrive.movement.ShipCore.tooltip=Definieert uw schips-middelpunt ten opzichte van ships-bestuurder. Sluit een stroombron aan om de kern op te laden.\nMoet horizontaal naast een Schips-bestuurder worden geplaatst.
-tile.warpdrive.movement.ShipCore.bounding_box.disabled=Bounding box display have been disabled.
-tile.warpdrive.movement.ShipCore.bounding_box.enabled=Bounding box display is now enabled. Only you can see it.\nSneak right-click the Ship core again to disable it.
+tile.warpdrive.movement.lift.name=Lift
+tile.warpdrive.movement.ship_controller.name=Schips-Bestuurder
+tile.warpdrive.movement.ship_controller.tooltip=Difineert uw schips-voorkant ten opzigte van kern. Sluit een computer aan om de interface te openen.\nMoet horizontaal naast een Schips-Kern worden geplaatst.
+tile.warpdrive.movement.ship_core.name=Schip-Kern
+tile.warpdrive.movement.ship_core.tooltip=Definieert uw schips-middelpunt ten opzichte van ships-bestuurder. Sluit een stroombron aan om de kern op te laden.\nMoet horizontaal naast een Schips-bestuurder worden geplaatst.
+tile.warpdrive.movement.ship_core.bounding_box.disabled=Bounding box display have been disabled.
+tile.warpdrive.movement.ship_core.bounding_box.enabled=Bounding box display is now enabled. Only you can see it.\n§bSneak right-click the Ship core§7 again to disable it.
 tile.warpdrive.movement.transporter_beacon.name=Transport-baken
+tile.warpdrive.movement.transporter_beacon.tooltip=§bRight click a Transporter Core§7 to set its remote location\n§bSneak§7 to retrieve its signature\n§bPlace as a block§7 to trigger emergency transportation
 tile.warpdrive.movement.transporter_containment.name=Transporter Containment
 tile.warpdrive.movement.transporter_core.name=Transporter Core
 tile.warpdrive.movement.transporter_scanner.name=Transporter Scanner
@@ -680,6 +681,15 @@ warpdrive.IC2reactorLaserMonitor.noReactor=Geen reactor gevonden!
 warpdrive.IC2reactorLaserMonitor.multipleReactors=%1$d reactor(s) aangesloten.
 
 warpdrive.transporter.status=Van (%1$.0f %2$.0f %3$.0f) naar (%4$.0f %5$.0f %6$.0f)
+warpdrive.transporter_beacon.status.invalid=§cNo transporter room linked
+warpdrive.transporter_beacon.status.valid=Linked to transporter room %1$s\n§8%2$s
+warpdrive.transporter_signature.get_missing=§cTransporter room has no signature yet!
+warpdrive.transporter_signature.get_same=§cTransporter beacon is already linked to %1$s.
+warpdrive.transporter_signature.get=Transporter beacon is now linked to %1$s.
+warpdrive.transporter_signature.set_missing=§cTransporter beacon needs to be linked first!
+warpdrive.transporter_signature.set_self=§cTransporter room can't target itself!
+warpdrive.transporter_signature.set_same=§cTransporter room is already linked to %1$s.
+warpdrive.transporter_signature.set=Transporter room is now linked to %1$s.
 
 warpdrive.tooltip.itemTag.breathingHelmet=§Ademhalen in de ruimte§r consumeert de inhoud van een Zuurstoffles en/of IC2 Gecompresseerde Luchtcellen uit je inventory.
 warpdrive.tooltip.itemTag.flyInSpace=§bJetpack Die werkt in de ruimte§r.
