--- a/src/main/resources/assets/warpdrive/lang/zh_CN.lang
+++ b/src/main/resources/assets/warpdrive/lang/zh_CN.lang
@@ -286,14 +286,15 @@ tile.warpdrive.forcefield.relay2.tooltip=支持一个力场升级在其网络内
 tile.warpdrive.forcefield.relay3.name=卓越力场继电器
 tile.warpdrive.forcefield.relay3.tooltip=支持一个力场升级在其网络内共享
 
-tile.warpdrive.movement.Lift.name=电梯
-tile.warpdrive.movement.ShipController.name=飞船控制仪
-tile.warpdrive.movement.ShipController.tooltip=放在核心前来控制和设定飞船, 在相连的电脑上打开交互界面.\n必须水平紧贴核心才能连接.
-tile.warpdrive.movement.ShipCore.name=飞船核心
-tile.warpdrive.movement.ShipCore.tooltip=相对于控制器以设定飞船中心.连接供能设备充能.\n必须水平紧贴控制器才能连接.
-tile.warpdrive.movement.ShipCore.bounding_box.disabled=边界显示已禁用.
-tile.warpdrive.movement.ShipCore.bounding_box.enabled=边界显示启用. 只有你可见.\n再次潜行右击核心可关闭.
+tile.warpdrive.movement.lift.name=电梯
+tile.warpdrive.movement.ship_controller.name=飞船控制仪
+tile.warpdrive.movement.ship_controller.tooltip=放在核心前来控制和设定飞船, 在相连的电脑上打开交互界面.\n必须水平紧贴核心才能连接.
+tile.warpdrive.movement.ship_core.name=飞船核心
+tile.warpdrive.movement.ship_core.tooltip=相对于控制器以设定飞船中心.连接供能设备充能.\n必须水平紧贴控制器才能连接.
+tile.warpdrive.movement.ship_core.bounding_box.disabled=边界显示已禁用.
+tile.warpdrive.movement.ship_core.bounding_box.enabled=边界显示启用. 只有你可见.\n再次潜行右击核心可关闭.
 tile.warpdrive.movement.transporter_beacon.name=运输信标
+tile.warpdrive.movement.transporter_beacon.tooltip=§bRight click a Transporter Core§7 to set its remote location\n§bSneak§7 to retrieve its signature\n§bPlace as a block§7 to trigger emergency transportation
 tile.warpdrive.movement.transporter_containment.name=Transporter Containment
 tile.warpdrive.movement.transporter_core.name=传送台
 tile.warpdrive.movement.transporter_scanner.name=Transporter Scanner
@@ -681,6 +682,15 @@ warpdrive.IC2reactorLaserMonitor.noReactor=未发现反应堆!
 warpdrive.IC2reactorLaserMonitor.multipleReactors=%1$d反应堆已连接.
 
 warpdrive.transporter.status=从 (%1$.0f %2$.0f %3$.0f) 到 (%4$.0f %5$.0f %6$.0f)
+warpdrive.transporter_beacon.status.invalid=§cNo transporter room linked
+warpdrive.transporter_beacon.status.valid=Linked to transporter room %1$s\n§8%2$s
+warpdrive.transporter_signature.get_missing=§cTransporter room has no signature yet!
+warpdrive.transporter_signature.get_same=§cTransporter beacon is already linked to %1$s.
+warpdrive.transporter_signature.get=Transporter beacon is now linked to %1$s.
+warpdrive.transporter_signature.set_missing=§cTransporter beacon needs to be linked first!
+warpdrive.transporter_signature.set_self=§cTransporter room can't target itself!
+warpdrive.transporter_signature.set_same=§cTransporter room is already linked to %1$s.
+warpdrive.transporter_signature.set=Transporter room is now linked to %1$s.
 
 warpdrive.tooltip.itemTag.breathingHelmet=§b太空中呼吸§r消耗背包中的IC压缩空气
 warpdrive.tooltip.itemTag.flyInSpace=§b太空喷气背包§r.
